tests/ui/expr-in-top-level-attr.stderr
error: expressions are not permitted within a struct-level #[substruct] annotation
 --> tests/ui/expr-in-top-level-attr.rs:3:13
  |
3 | #[substruct(any(A, B, C))]
  |             ^^^^^^^^^^^^
